[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/quiz/quizbutton.png" type="Texture" id=1]
[ext_resource path="res://scenes/quiz bottons/WrongButton.gd" type="Script" id=2]
[ext_resource path="res://scenes/quiz bottons/RightButton.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
position = Vector2( -120, 96 )

[node name="RightButton" type="Button" parent="."]
margin_left = 480.0
margin_top = 192.0
margin_right = 1680.0
margin_bottom = 311.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightSprite" type="Sprite" parent="RightButton"]
position = Vector2( 600, 62 )
scale = Vector2( 1, 0.826667 )
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="RightButton"]

[node name="Opção 1" type="Label" parent="RightButton/CanvasLayer"]
anchor_left = -0.0625
anchor_top = 0.0888889
anchor_right = -0.0625
anchor_bottom = 0.0888889
margin_left = 504.0
margin_top = 248.0
margin_right = 1656.0
margin_bottom = 264.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Opção 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WrongButton" type="Button" parent="."]
margin_left = 480.0
margin_top = 416.0
margin_right = 1680.0
margin_bottom = 535.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightSprite" type="Sprite" parent="WrongButton"]
position = Vector2( 600, 56.5 )
scale = Vector2( 1, 0.833333 )
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="WrongButton"]

[node name="Opção 2" type="Label" parent="WrongButton/CanvasLayer"]
anchor_left = -0.0625
anchor_top = 0.0888889
anchor_right = -0.0625
anchor_bottom = 0.0888889
margin_left = 504.0
margin_top = 464.0
margin_right = 1656.0
margin_bottom = 512.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Opção 2

"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="RightButton" to="RightButton" method="_on_RightButton_mouse_entered"]
[connection signal="mouse_exited" from="RightButton" to="RightButton" method="_on_RightButton_mouse_exited"]
[connection signal="pressed" from="RightButton" to="RightButton" method="_on_RightButton_pressed"]
[connection signal="mouse_entered" from="WrongButton" to="WrongButton" method="_on_WrongButton_mouse_entered"]
[connection signal="mouse_exited" from="WrongButton" to="WrongButton" method="_on_WrongButton_mouse_exited"]
[connection signal="pressed" from="WrongButton" to="WrongButton" method="_on_WrongButton_pressed"]
